terraform/infra/modules/network/vpc.tf
resource "aws_vpc" "vpc"{
    cidr_block = var.cidr_block
    tags = {
      Name= "Main VPC"
    }
}
